--- a/ASSIGNMENT2/package.json
+++ b/ASSIGNMENT2/package.json
@@ -13,6 +13,7 @@
     "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
     "mongodb": "^6.18.0",
+    "mongoose": "^8.17.1",
     "morgan": "^1.10.1"
   }
 }
